# alkonost

./: Cargo.toml  LICENSE  README.md
alkonost/: Cargo.toml  README.md
alkonost/src/: error.rs  lib.rs
chat_manager/: Cargo.toml  README.md
chat_manager/src/: error.rs  lib.rs  messages.rs
chat_manager/src/chat/: chat_params.rs  error.rs  inner_messages.rs  mod.rs  params_extractor.rs  poller.rs  retranslator.rs
chat_manager/src/type_converter/: extractors.rs  mod.rs
chat_manager/src/youtube_types/: actions.rs  generic_types.rs  mod.rs  root.rs
chat_manager/test_jsons/: 1cxZ91MLEso.rsp  5XgOWuKwcjc.rsp  7AdZnOhL1Ak.rsp  An59vklhHIw.rsp  CZ8NsaQ4PCQ.rsp  GFYNrNN5yJo.rsp  HG94a-F_Tvg.rsp  IHHvacz0ep0.rsp  LOXWDUcw12Y.rsp  U8rx1f35lSU.rsp  XHWGR463ybk.rsp  XrYt6cPy2kc.rsp  _xL58zG9k5k.rsp  cxAxSC1v20M.rsp  hPRoh9XPxn4.rsp  m42rYRrI8eg.rsp  mcQs0iQE0bs.rsp  ogi-hvlDcMc.rsp  rY4giBtbtlo.rsp  s7hakOSsU-I.rsp  xJ2TwpUDzDQ.rsp
chat_poller/: Cargo.toml  README.md  unimplemented_types.json
chat_poller/src/: chat_params.rs  error.rs  lib.rs  messages.rs  params_extractor.rs
chat_poller/src/type_converter/: extractors.rs  mod.rs
chat_poller/src/youtube_types/: actions.rs  generic_types.rs  mod.rs  root.rs
chat_poller/test_jsons/: -lpRK57SoFc.rsp  7xlf6moSVmM.rsp  AIMfk5uQ65Q.rsp  INFI9FahPY0.rsp  Ihmw7hL0qQk.rsp  MGRtq9x09_g.rsp  U5IddmZPBIE.rsp  VsZ7eeg5uZs.rsp  ccqEaaewGmk.rsp  dQ1pQ6nOzCE.rsp  h4j_5WUL4nk.rsp  hroUNtRNvqA.rsp
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: http_client.rs  lib.rs  messages.rs  types.rs  youtube_regexes.rs
detector/: Cargo.toml  README.md
detector/src/: detector_params.rs  error.rs  lib.rs  message_data.rs  spam_detector.rs  user_data.rs
shared/: Cargo.toml  README.md
shared/src/: detector_params.rs  http_client.rs  lib.rs  messages.rs  youtube_regexes.rs
stream_finder/: Cargo.toml  README.md
stream_finder/src/: error.rs  lib.rs  messages.rs  video_list.rs
ui/: Cargo.toml  README.md
