[package]
name = "chat_manager"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
description = "Chat manager"
edition = "2018"
readme = "README.md"

[dependencies]
core = { path = "../core", version = "^0" }
chat_poller = { path = "../chat_poller", version = "^0" }
thiserror = "^1"
tokio = { version = "^1", default-features = false, features = ["time"] }