[package]
name = "chat_poller"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
description = "Chat poller"
edition = "2018"
readme = "README.md"

[dependencies]
shared = { path = "../shared", version = "^0" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
vec1 = { version = "^1", default-features = false, features = ["serde"] }
html-escape = "^0"
thiserror = "^1"
chrono = { version = "^0", default-features = false, features = ["clock"] }
tokio = { version = "^1", default-features = false, features = ["time"] }