[package]
name = "cli"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
description = "Simple CLI"
edition = "2018"
readme = "README.md"

[dependencies]
core = { path = "../core", version = "^0" }
chat_manager = { path = "../chat_manager", version = "^0" }
stream_finder = { path = "../stream_finder", version = "^0" }
detector = { path = "../detector", version = "^0" }
thiserror = "^1"
tokio = { version = "^1", default-features = false, features = ["macros", "rt-multi-thread"]}