[package]
name = "stream_finder"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
description = "Extracts upcomming and live streams and premiers from the YouTube channel page"
edition = "2018"
readme = "README.md"

[dependencies]
core = { path = "../core", version = "^0" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
tokio = { version = "^1", default-features = false, features = ["time"] }
futures = "^0"