[package]
name = "ui"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
description = "Various UI options for Alkonost"
edition = "2018"
readme = "README.md"

[dependencies]
alkonost = { path = "../alkonost", version = "^0" }
core = { path = "../core", version = "^0" }
thiserror = "^1"
tokio = { version = "^1", default-features = false, features = ["macros", "rt-multi-thread"]}
rillrate = { version = "^0", optional = true }

[features]
rillrate_ui = ["rillrate"]

[[bin]]
name = "cli"

[[bin]]
name = "rillrate"
required-features = ["rillrate_ui"]